force-app/main/default/objects/Timesheet_Entry__c/Timesheet_Entry__c.object-meta.xml
<CustomObject>
    <description>Entries for Timesheets</description>
    <label>Timesheet Entry</label>
    <nameField>
        <displayFormat>TS Entry-{000000000}</displayFormat>
        <label>Timesheet Entry #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>