force-app/main/default/objects/Timesheet_Entry__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <inlineHelpText>Enter the end of your day here.</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>