force-app/main/default/objects/Timesheet_Entry__c/fields/SOE__c.field-meta.xml
<CustomField>
    <fullName>SOE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOE</label>
    <referenceTo>SOE__c</referenceTo>
    <relationshipLabel>Timesheet Entries</relationshipLabel>
    <relationshipName>Timesheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>