force-app/main/default/objects/Timesheet_Entry__c/validationRules/End_within_Timesheet_Pay_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>End_within_Timesheet_Pay_Period</fullName>
    <active>false</active>
    <description>Timesheet Entry End must be less than or equal to Timesheet Pay Period End.</description>
    <errorConditionFormula>IF ( or(ISNULL(End__c),ISNULL( Timesheet__r.PayPeriod_End__c ),DATEVALUE(End__c) &gt;= DATEVALUE( Timesheet__r.PayPeriod_End__c )) , true, false)</errorConditionFormula>
    <errorDisplayField>End__c</errorDisplayField>
    <errorMessage>The End must be less than or equal to the Timesheet Pay Period End.</errorMessage>
</ValidationRule>