force-app/main/default/objects/Timesheet_Entry__c/validationRules/Start_cannot_be_after_the_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_cannot_be_after_the_End</fullName>
    <active>false</active>
    <description>Start must be before the End.</description>
    <errorConditionFormula>Start__c  &gt; End__c</errorConditionFormula>
    <errorDisplayField>Start__c</errorDisplayField>
    <errorMessage>The Start cannot be after the End.  Please enter a date and time prior to the End date and time.</errorMessage>
</ValidationRule>